Fixed overflow property of text in test preview

--- a/src/styles/Tests.css
+++ b/src/styles/Tests.css
@@ -14,6 +14,7 @@
   margin: 5px;
   height: auto;
   transition: 0.14s;
+  max-width: 200px;
 }
 
 .test-preview-container:hover {
@@ -27,7 +28,7 @@
 .test-preview-question-container {
   color: black;
   font-size: x-small;
-  padding: 0 5px 0 5px;
+  padding: 8px 5px;
   width: 100%;
   height: 25px;
   display: flex;
@@ -56,7 +57,7 @@
 }
 
 .thumbnail {
-  width: 70px;
+  max-width: 90px;
   height: auto;
   margin: 5px;
 }
